--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,10 @@
         android:theme="@style/Theme.LocMaBar"
         tools:targetApi="31">
 
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyBJaSy4pXUOMgTG_E6NLwShK2YzyFWy2TU" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
